overflow fix

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -90,9 +90,9 @@ body {
   margin: 0;
   
   // margin-top: 8rem;
-  // overflow-x: hidden;
+  overflow-x: hidden;
   // overflow-y: visible;
-  overflow: visible;
+  // overflow: visible;
   color: var(--main-dark-color);
   background-color: var(--white);
   transition: background-color .3s ease,color .3s ease;
